feat: add new branch, rewrite description, h1 and title

--- a/src/components/_variables.pug
+++ b/src/components/_variables.pug
@@ -3,8 +3,8 @@
 
 //-Основная информация
 - phone = { formatted: "+7 (499) 677‒61‒72", notFormatted: "+74996776172" }
-- title = `Автошкола АвтоМСК  | Онлайн и офлайн обучение в Москве на категорию B и A за 3 месяца`
-- description = `✅ Обучение вождению в Москве в автошколе  АвтоМСК ✔️ Категория А и Б ✔️ Филиалы и автодромы рядом с метро  ✔️ Офлайн и онлайн ✔️ Учим на права по маршрутам ГИБДД ✔️ Выпустили 3,7+ тыс. водителей ☎️ ${phone.formatted}`
+- title = `Обучение в автошколе Москвы на категории А и B, C, D, E, школа вождения,  курсы вождения автомобиля в Москве | Автошкола АвтоМСК`
+- description = `Обучение на права категорий А и Б, С, Д, Е в Москве, официальная автошкола. Низкие цены, опытные инструктора, возможна рассрочка платежа. Помощь сдачи экзаменов в ГИБДД. Обучение с "нуля". Права за 3 месяца, практика с первых дней!`
 - mail = ""
 - workTime = "с 8:00 до 22:30 по будням и с 9:00 до 22:00 по выходным"
 - vk = "https://vk.com/mskautoklass"
@@ -108,8 +108,13 @@
             href: "lubyanka.html",
             address: "улица Никольская, 10",
             mapSrc: "https://yandex.ru/map-widget/v1/?ll=37.624306%2C55.758097&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjcxODgxMBI_0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAsINCd0LjQutC-0LvRjNGB0LrQsNGPINGD0LvQuNGG0LAsIDEwIgoNiH8WQhUmCF9C&utm_medium=mapframe&utm_source=maps%22%20style%3D%22color%3A&z=15.04"
+        },
+        {
+            name: "м. Пятницкое шоссе",
+            href: "pyatnickoe-shosse.html",
+            address: "деревня Аристово, Тихий переулок, 2",
+            mapSrc: "https://yandex.ru/map-widget/v1/?ll=37.282023%2C55.897822&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1Nzk1MzM3NRKoAdCg0L7RgdGB0LjRjywg0JzQvtGB0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsINCz0L7RgNC-0LTRgdC60L7QuSDQvtC60YDRg9CzINCa0YDQsNGB0L3QvtCz0L7RgNGB0LosINC00LXRgNC10LLQvdGPINCQ0YDQuNGB0YLQvtCy0L4sINCi0LjRhdC40Lkg0L_QtdGA0LXRg9C70L7QuiwgMiIKDdAgFUIVXJdfQg%2C%2C&z=16.86"
         }
-
     ].sort((a, b) => a.name.localeCompare(b.name))
 
 //-Инструкторы
